--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Idle Game</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div class="">
+
+    </div>
 
   </body>
-</html>>
+</html>
